# Telegram-Bot-Orari-Vallauri

./: Cargo.toml  README.md  copia_cogliona.rs  main.py  main.rs  orario_dumper.py  settimana.py
.github/workflows/: code_quality.yml  rust-qa.yml
orario-dumper/: README.md  orario_dumper.py  requirements.txt  settimana.py
src/: main.rs
