[package]
name = "orario-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.113"
lazy_static = "1.4.0"
regex = "1.10.3"
chrono = "0.4.33"
